# dcodex-cookiecutter

./: CONTRIBUTORS.md  README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env  backuptools.py  createdb.sh  production.yml  pyproject.toml  shell.sh
{{cookiecutter.project_slug}}/.envs/.production/: .django
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/local/docs/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/traefik/: traefik.yml
{{cookiecutter.project_slug}}/config/: urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt  production.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/css/: project.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html  home_logo.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: storages.py
