[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
django-watson = ">=1.5.5"
django-stronghold = ">=0.4.0"
python-slugify = ">=5.0.2"
rcssmin = ">=1.0.6"
argon2-cffi = ">=21.1.0"
{%- if cookiecutter.use_whitenoise == 'y' %}
whitenoise = ">=5.3.0"
{%- endif %}
redis = ">=3.5.3"
hiredis = ">=2.0.0"
{%- if cookiecutter.use_celery == "y" %}
celery = ">=5.1.2"
django-celery-beat = ">=2.2.1"
{%- endif %}
django-timezone-field = ">=4.2.1"
flower = ">=1.0.0"
django-environ = ">=0.8.1"
django-model-utils = ">=4.2.0"
django-allauth = ">=0.45.0"
django-crispy-forms = ">=1.13.0"
{%- if cookiecutter.use_compressor == "y" %}
django-compressor = ">=2.4.1"
{%- endif %}
django-redis = ">=5.0.0"
{%- if cookiecutter.use_drf == "y" %}
djangorestframework = ">=3.12.4"
django-cors-headers = ">=3.10.0"
{%- endif %}
django-extensions = ">=3.1.3"
django-filer = ">=2.0.2"
django-cms = ">=3.9.0"
djangocms-admin-style = ">=2.0.2"
djangocms-attributes-field = ">=2.0.0"
djangocms-file = ">=3.0.0"
djangocms-googlemap = ">=2.0.0"
djangocms-link = ">=3.0.0"
djangocms-picture = ">=3.0.0"
djangocms-snippet = ">=3.0.0"
djangocms-style = ">=3.0.0"
djangocms-text-ckeditor = ">=4.0.0"
djangocms-video = ">=3.0.0"
djangocms-bootstrap4 = ">=2.0.0"
djangocms-page-meta = ">=1.0.1"
django-storages = {extras = ["boto3"], version = ">=1.12.2"}
gunicorn = ">=20.1.0"
django-anymail = ">=8.4"
psycopg2 = ">=2.9.1"
scipy = ">=1.7.3"
crispy-bootstrap4 = ">=2024.10"

dcodex = {git = "https://github.com/rbturnbull/dcodex.git", branch="dates"}

{%- if cookiecutter.use_dcodex_bible == "y" %}
dcodex-bible = {git = "https://github.com/rbturnbull/dcodex_bible.git"}
{%- endif %}
{%- if cookiecutter.use_dcodex_lectionary == "y" %}
dcodex-lectionary = {git = "https://github.com/rbturnbull/dcodex_lectionary.git"}
{%- endif %}
{%- if cookiecutter.use_dcodex_collation == "y" %}
dcodex-collation = {git = "https://github.com/rbturnbull/dcodex_collation.git", branch = "dev"}
{%- endif %}
{%- if cookiecutter.use_dcodex_variants == "y" %}
dcodex-variants = {git = "https://github.com/rbturnbull/dcodex_variants.git"}
{%- endif %}


[tool.poetry.dev-dependencies]
Werkzeug = ">=2.0.2"
ipdb = ">=0.13.9"
python-dotenv = ">=0.19.1"
notebook = ">=6.4.5"
jupyter = ">=1.0.0"
mypy = ">=0.910"
django-stubs = ">=1.9.0"
pytest = ">=6.2.5"
pytest-sugar = ">=0.9.4"
Sphinx = ">=4.2.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-rtd-theme = ">=0.5.1"
nbsphinx = ">=0.8.7"
flake8 = ">=3.8.4"
flake8-isort = ">=4.0.0"
coverage = ">=5.4"
black = ">=21.9b0"
pylint-django = ">=2.4.4"
pylint-celery = ">=0.3"
pre-commit = ">=2.15.0"
factory-boy = ">=3.2.0"
django-debug-toolbar = ">=3.2.2"
django-coverage-plugin = ">=2.0.1"
pytest-django = ">=4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
